2017-08-22  Danilo Chang

     * Add getProperty/getName implement

2017-08-21  Danilo Chang

     * Bump version to v0.1.1
     * Add compression type option support

2017-08-20  Danilo Chang

     * Add basic function: put/get/delete/exists
     * Implement rocksdb command

2017-08-19  Danilo Chang

     * Dump sample extension
