@@ -24,7 +24,7 @@ tcl-rocksdb is Licensed under Apache License, Version 2.0.
 UNIX BUILD
 =====
 
-I only test on openSUSE.
+I only test on openSUSE LEAP 42.3 and Ubuntu 14.04.
 
 The first step is to build RocksDB shared library and install.
 RocksDB depends on newer gcc/clang with C++11 support.
@@ -77,6 +77,8 @@ rocksdb open -path path ?-readonly BOOLEAN? ?-create_if_missing BOOLEAN?
  ?-use_fsync BOOLEAN? ?-write_buffer_size size? 
  ?-max_write_buffer_number number? ?-target_file_size_base size? 
  ?-max_open_files number? ?-compression type?   
+rocksdb repair name  
+rocksdb destroy name  
 DB_HANDLE get key  
 DB_HANDLE put key value ?-sync BOOLEAN?  
 DB_HANDLE delete key  
@@ -84,6 +86,7 @@ DB_HANDLE exists key
 DB_HANDLE write BAT_HANDLE  
 DB_HANDLE batch  
 DB_HANDLE iterator  
+DB_HANDLE getApproximateSizes start limit  
 DB_HANDLE getName  
 DB_HANDLE getProperty property  
 DB_HANDLE close  
@@ -103,11 +106,26 @@ BAT_HANDLE close
 The command `rocksdb open` create a database handle. -path option is the path 
 of the database to open.
 -compression type supports "no", "snappy", "zlib", "bzip2", "lz4" and "lz4hc".
+(Please link to snappy at least, I think it is the default type.)
+
+If a DB cannot be opened, you may attempt to call `rocksdb repair` this method
+to resurrect as much of the contents of the database as possible. Some data
+may be lost, so be careful when calling this function on a database that
+contains important information.
+
+`rocksdb destroy` destroy the contents of the specified database.
+Be very careful using this method.
 
 `DB_HANDLE iterator` create an Iterator handle.
 
 `DB_HANDLE batch` create a WriteBatch handle. Users can use `DB_HANDLE write`
 to apply a set of updates.
+
+`DB_HANDLE getApproximateSizes` get the approximate file system space.
+Note that the returned sizes measure file system space usage,
+so if the user data compresses by a factor of ten, the returned sizes will be
+one-tenth the size of the corresponding user data size. If user gives the wrong
+range, the return size is 0.
 
 `DB_HANDLE getName` can get the exact same name that was provided as
 an argument (-path) to open DB.
